# convert-csv-to-delta

./: .gitignore  README.md  pyproject.toml
src/: app.py  main.py  query_delta_table.ipynb  requirements.txt
src/utils/: _.ipynb  config.py  convert_csv_to_parquet.py  convert_parquet_to_delta.py  data_loader.ipynb  filtrar_parquet_por_index.ipynb
